# EMOT

./: README.md
algorithm/detection/second/: .gitignore  README.md  create_data.py  train.py
algorithm/detection/second/configs/: car.fhd.onestage.config
algorithm/joint_detection_and_tracking/: .gitignore  README.md  config.py  evaluate.py  test_loss.py  test_tracking.py  train.py
algorithm/joint_detection_and_tracking/appearance_model/: tracking_net.py  utils.py
algorithm/joint_detection_and_tracking/dataset/: id_dataset.py  tracking_dataset.py
algorithm/joint_detection_and_tracking/motion_model/: kalman.py
algorithm/joint_detection_and_tracking/tracking/: data_association.py  hungarian_tracker.py  kitti_track.py  kitti_tracker.py
algorithm/joint_detection_and_tracking/utils/: common_utils.py  fastai_optim.py
algorithm/tracking/: .gitignore  kitti_evaluate.py  kitti_tracking.py  main.py  requirements.txt  test.py  visualization.py
algorithm/tracking/appearance_model/: fusion_net.py  gcn.py  new_end.py  point_net.py  tracking_net.py
algorithm/tracking/motion_model/: kalman.py
algorithm/tracking/tracking/: data_association.py  kitti_track.py  kitti_tracker.py  sustech_track.py  sustech_tracker.py  track.py  tracker.py
algorithm/tracking/utils/: box_util.py  data_util.py  kitti_util.py  point_util.py  sustech_util.py
dataset/: CMakeLists.txt  convert_to_kitti_label.py  sustechscape_to_kitti.cpp  visualization.py
dataset/ImageSets/: train.txt
viewer/: .gitignore  CMakeLists.txt  viewer2d.py  viewer3d.cpp
(+18 files in other folders)
